# meloday

./: .env.example  .gitignore  env.d.ts  index.html  mock-data.json  package-lock.json  package.json  tsconfig.app.json  wrangler.jsonc
.github/workflows/: desktop-release.yml
desktop/: .env.example  .gitignore  env.d.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/src/: CaptureApp.vue  main.ts  styles.css  supabase.ts  tags.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
public/: install.sh
src/: App.vue
src/components/: AccountControl.vue  AccountPanel.vue  AmbientControls.vue  AppBottomBar.vue  AppCalendar.vue  AppHeader.vue  ArchiveView.vue  AuthGate.vue  ColorPicker.vue  DatePickerPopover.vue  DayNotePanel.vue  DayTimer.vue  FocusSession.vue  InboxColumn.vue  NoteEditor.vue  NotePanel.vue  OccasionGift.vue  OccasionHeadsUp.vue  PreferencesPanel.vue  QuickCapture.vue  SetPasswordGate.vue  ShortcutsHelp.vue  TaskMoveMenu.vue  TaskNotePanel.vue  Toast.vue  TodoCustomList.vue  TodoDay.vue  TodoDayFocus.vue  TodoFrameCustom.vue  TodoFrameDays.vue  TodoItem.vue  TodoItemInput.vue  TodoList.vue
src/composables/: useAmbientSound.ts  useArchive.ts  useAuth.ts  useDarkMode.ts  useDayTimer.ts  useFocusSession.ts  useHelp.ts  useImeEnter.ts  useInbox.ts  (+9 more)
supabase/: append_inbox_item.sql  schema.sql  todo_archive.sql  todo_items.sql  todo_lists.sql  todo_notes.sql  user_occasions.sql  user_prefs.sql
(+9 files in other folders)
